--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <title>评审系统</title>
     <link rel="stylesheet" type="text/css" href="src/css/style.css">
+    <script type="text/javascript" src="src/js/menu.js"></script>
 </head>
-<body style="margin: 0px 0px 0px 0px">
-<div class="header"></div>
+<body onload="initMenu()">
+
 <div class="topDiv">评审系统</div>
+<div class="barDiv">Appraisal System</div>
 <div class="mainDiv">
-    <div class="leftDiv"></div>
-    <div class="rightDiv"></div>
+    <div class="leftDiv" id="leftDiv"></div>
+    <div class="rightDiv">
+        <div class="rightTopBar"></div>
+        <iframe class="rightFrame" id="rightFrame"></iframe>
+    </div>
 </div>
+
+<div class="footer"></div>
 </body>
 </html>
